mule-user-guide/v/3.2/ejb-transport-reference.adoc
=  EJB传输参考

EJB传输允许将EJB会话bean作为事件流的一部分进行调用。可以为组件提供一个EJB出站端点，该端点调用远程对象并可选择返回结果。

可以找到此传输的Javadoc http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/ejb/package-summary.html[这里]。

== 连接器

Mule EJB连接器为EJB bean提供连接。

<connector...>的{​​{0}}属性

[%header,cols="10,10,10,10,60"]
|===
| {名称{1}}输入 |必 |缺省 |说明
轮询连接之间的周期（毫秒）|轮询频率 |长 |否 |   |。
| securityManager-ref  |名称（无空格） |否 |   |应该使用的安全管理器的Bean引用。
| securityPolicy  |字符串 |否 |   |用于启用连接的安全策略（文件名）。
| serverClassName  |名称（无空格） |否 |   |目标类名称。
| serverCodebase  |字符串 |否 |   |目标方法。
|===

<connector...>的{​​{0}}子元素

[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|===

例如：

[source, xml, linenums]
----
<ejb:connector name="ejb" jndiContext-ref="jndiContext" securityPolicy="rmi.policy" />
----

== 使用EJB传输

要使用EJB传输，您必须在Mule配置文件的顶部定义EJB名称空间和模式位置。例如：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:ejb="http://www.mulesoft.org/schema/mule/ejb"
       xsi:schemaLocation="
               http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd
               http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd
               http://www.mulesoft.org/schema/mule/ejb http://www.mulesoft.org/schema/mule/ejb/3.2/mule-ejb.xsd">
...
----

EJB端点的配置方式与 link:/mule-user-guide/v/3.2/rmi-transport-reference[RMI端点]相同。请注意，只有出站端点才能使用EJB传输。对于给定的端点，您必须提供以下信息：

* 注册主机
* 注册表端口
* 远程家庭名称
* 远程方法名称

这些值建立调度程序连接。例如：

[source, xml, linenums]
----
<ejb:endpoint host="localhost" port="1099" object="SomeService" method="remoteMethod"/>
----

或者，您可以使用基于URI的配置：

[source, xml, linenums]
----
<outbound-endpoint address="ejb://localhost:1099/SomeService?method=remoteMethod"/>
----

如果该方法可以接受一个或多个输入参数，则可以使用`methodArgumentTypes`属性将它们的类型配置为逗号分隔列表。多个参数作为Mule消息的有效载荷以对象数组的形式传入。

== 架构

*  EJB架构：http://www.mulesoft.org/schema/mule/ejb/3.2/mule-ejb.xsd

== 变压器

EJB不需要特定的转换器。
